--- a/customization/themes/custom/login/resources/css/styles.css
+++ b/customization/themes/custom/login/resources/css/styles.css
@@ -7,10 +7,11 @@
 }
  
 .login-pf body {
-    background-image: url('../img/pexels-pixabay-358312.jpg'),
+    /* background-image: url('../img/pexels-pixabay-358312.jpg'),
     linear-gradient(135deg, var(--default-background-color) 0%, rgb(198, 168, 223));
-}
- 
+    */
+    background-color: white;
+} 
 .login-pf a:hover {
     color: var(--link-hover-color);
     text-decoration: none;
@@ -18,4 +19,12 @@
  
 .pf-c-form-control {
     --pf-global--primary-color--100: unset;
+}
+
+div.kc-logo-text {
+    background-image: url(../img/adex-logo-text.png);
+    background-repeat: no-repeat;
+    height: 63px;
+    width: 300px;
+    margin: 0 auto;
 }
